--- a/registration.html
+++ b/registration.html
@@ -79,7 +79,7 @@
 			  </header>
 			<section class="generic-banner relative">	
 			<div class="overlay overlay-bg"></div>
-				<div class="theme-bg">
+				<div class="reg-bg">
 				
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
