--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
@@ -27,29 +27,8 @@
 			<link rel="stylesheet" href="css/magnific-popup.css">
 			<link rel="stylesheet" href="css/bootstrap.css">
 			<link rel="stylesheet" href="css/main.css">
-			<style>
-			#ok1{
-				margin: 10px 50px;
-				float:left;
-				text-align: justify;
-			}
-			#ok2{
-				padding: 5px;
-				text-align: justify;
-				text-justify: auto;
-			}
-			#hd1{
-				margin-top: 60px;
-				margin-bottom: 25px;
-				text-align: center;
-			  color: rgb(100,30,30);
-			}
-			body{
-				background-color: rgb(248,248,248);
-			}
-
-			</style>
-
+			
+			
 		</head>
 		<body>
 
@@ -117,50 +96,26 @@
 				<div class="welcome cf">
 					<div class="intro">
 					 <br><br>
-						<font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+					 <br><br>
+					 <center><img src="./img/nit1.jpg" style="width: 70%;height: 600px;"></center><br><br>
 
-				<b>National institue of kurukshetra</b>(Formerly Regional Engineering College),
-				(established in 1963), is one among the foremost institues of national importance imparting higher technical education in india.
+					  <font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+						<b>National Institute of Technology Kurukshetra</b>, Haryana is a premier Technical Institute of the region. The institute started working as Regional Engineering College, Kurukshetra in 1963. Like other Regional Engineering Colleges of India this institution too, had been a joint enterprise of the State and Central Governments. This Institute was conferred upon status of Deemed University  on June 26, 2002. Since then it has been renamed as National Institute of Technology, Kurukshetra.
 
-				<div id="ok">
-					<div id ="ok1">
-						<img src="./img/nitphoto.jpg"  width="300px" height="182px">
-					</div>
-
-					<div id="ok2">
-
-						This institue was conferred upon the status of deemed university on Jun 26,2002.
-						Since then, it has been named as national institue of kurukshetra(Deemed university).NIT Kurukshetra is a residential institute well Known
-						for its dedicated faculty ,staff and state-of-the-art infrastructure.
-						The institue offers B.tech, M.tech, M.B.A and Ph.D programmes.
-						The institue enjoys an excellent placement service for its graduate and post graduate students.
-					</div>
-				</div>
-				<br>
+						The Institute started functioning in its present campus at Kurukshetra in 1965-66 with 120 students admitted in the first year of the Five-Year Courses of study for the B.Sc. (Engg.) Degree in Civil, Electrical and Mechanical Engineering. The annual intake was increased to 250 students in 1966-67. B.Sc. (Engg.) degree courses in Electronics and Communication Engineering was added in 1971-72. in 1967-68 M. Sc. (Engg.) degree courses in Electronics and Communication Engineering was added in 1971-72. In 1967-68 M. Sc. (Engg.) degree courses in Civil, Electrical and Mechanical Engineering and in 1971-72, a Postgraduate diploma in Scientific instrumentation were also started. In July, 1976 Part-Time M. Sc. ( Engg.) degree courses in Electronics and Communication Engineering and instrumentation were started. The First registration for the degree of Doctor of Philosophy in the Faculty of Engineering and Technology was made in July, 1967.
+			
+			</p></font>
+					  <br><br>
+					  <center><img src="./img/ece.jpg" style="width: 70%;height: 600px;"></center><br><br>
+					  <font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+						The branch of <b>Electronics and Communication Engineering</b> was started in the year 1971 under the aegis of Electrical Engineering Department. The “Department of Electronics and Communication Engineering” came into existence in the year 1973. In 1987, Computer Engineering branch was also started and the department was renamed as “Electronics, Communication and Computer Engineering”. In 2003, the department was again renamed as “Electronics and Communication Engineering” because of inception of “Computer Engineering Department” separately. The department started M.Tech. program in ECE and VLSI design in the year of 1987 and 2007, respectively. Presently, M.Tech. (VLSI Design) is being offered by the School of VLSI Design and Embedded Systems independently.
+			
+			</p></font>  
 
 
-				<!-- <br> -->
-				<!-- <br> -->
-							<div id="hd1">
-								 DEPARTMENT OF ELECTRONICS 	AND COMMUNICATION ENGINEERING
-							 </div>
-							 <div id="ok">
-								 <div id ="ok1">
-									 <img src="./img/ece.jpg" width="300px" height="182px">
-								 </div>
-
-								 <div id="ok2">
-									 The branch of Electronics and Communication Engineering was started under the aegis of Electrical Engineering Department. The “Department of Electronics and Communication Engineering” came into existence in the year 1973. In 1987, Computer Engineering branch was also started and the department was renamed as “Electronics, Communication and Computer Engineering”. In 2003, the department was again renamed as “Electronics and Communication Engineering” because of inception of “Computer Engineering Department” separately. The department started M.Tech. program in ECE and VLSI design in the year of 1987 and 2007, respectively. Presently, M.Tech. (VLSI Design) is being offered by the School of VLSI Design and Embedded Systems independently.
-									 <br />
-									 <br/>
-
-								 </br/>
-								 </div>
-	</p></font>
-						<br>
-	<br><br><br>
-					</div>
-				</div>
+			<br.<br><br><br>
+					</div>  
+				  </div>
 			</section>
 
 
