--- a/callforp.html
+++ b/callforp.html
@@ -107,6 +107,7 @@ All submitted papers must be in <a href="https://www.springer.com/series/16171">
 
 <a href="Brochure_2.pdf">DOWNLOAD CFP</a>
 <BR><br>
+<a href="Brochure2.pdf">DOWNLOAD NEW CFP</a>
 
 <H1 class="text-black" style="margin-left: 5%">SUBMISSION GUIDELINES</H1>
 
