--- a/callforp.html
+++ b/callforp.html
@@ -105,9 +105,9 @@ All submitted papers must be in <a href="https://www.springer.com/series/16171">
 <br><br>
 
 
-<a href="Brochure_2.pdf">DOWNLOAD CFP</a>
+<a href="Brochure2.pdf">DOWNLOAD CFP</a>
 <BR><br>
-<a href="Brochure2.pdf">DOWNLOAD NEW CFP</a>
+
 
 <H1 class="text-black" style="margin-left: 5%">SUBMISSION GUIDELINES</H1>
 
