--- a/index.html
+++ b/index.html
@@ -124,8 +124,12 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1027.8001429596584!2d76.81679094449134!3d29.947979791542398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390e3f521c4f3a71%3A0x2c82fb6d6a3d980b!2sDepartment%20of%20Electronics%20And%20Communication%20Engineering!5e0!3m2!1sen!2sin!4v1582343892637!5m2!1sen!2sin" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" maptype="satellite"></iframe>
 			<br><br><br><Br>
 		</section>
+		<section>
+			<h1 class="mb-10" align="center">PUBLICATION PARTNERS</h1><br><br>
+			<img src="./img/springer.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./img/inderscience.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./img/elseiver.png" alt="">
 			
-		
+			
+				</section>
 			
 			
 
