--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@crankbot0118 
+Learn Git and GitHub without any code!
+Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+
+
+crankbot0118
+/
+ic4e2020.io
+0
+00
+ Code Issues 0 Pull requests 0 Actions Projects 0 Wiki Security Insights Settings
+ic4e2020.io/index.html
+@crankbot0118 crankbot0118 Update index.html
+280a889 now
+@crankbot0118@redknight07
+158 lines (125 sloc)  6.63 KB
+  
 	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
@@ -126,10 +151,14 @@
 		</section>
 		<section>
 			<h1 class="mb-10" align="center">PUBLICATION PARTNERS</h1><br><br>
-			<img src="./img/springer.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./img/inderscience.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./img/elseiver.png" alt="">
+			<center><img src="./img/springer.png" alt="""><img src="./img/inderscience.png" alt="" style="margin-left: 5%;"><img src="./img/elseiver.png" alt="" style="margin-left: 5%;"></center>
 			
 			
 				</section>
+				<br>
+				<br>
+				<br>
+				
 			
 			
 
@@ -155,4 +184,15 @@
 	</html>
 
 
-
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
