--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
 				<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN">Authors are requested to submit full length paper online through <a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</a></font></h4></marquee><br><br>
 				
 			</section>
+		<section>
+			<div class="welcome cf" style="margin-left: 3%;">
+				<div class="intro">
+				 <br><br>
+				  <font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+					Paper submissions are invited in the areas of next generation computing, communication and VLSI & Embedded Systems towards Intelligent and Green technologies. All submitted papers must be in SPRINGER AIS (Algorithms for Intelligent Systems) format.<br><br><br>
+Submit your research paper to IC4E-2020 through the <a href="https://easychair.org/conferences/?conf=ic4e2020">Online Submission System</a> 
+		
+		
+		</p></font>
+				  <br>
+		<br.<br><br><br>
+				</div>  
+			  </div>
+		</section>
 			  
 			<section>
 			<br><br><br>	
