--- a/travel.html
+++ b/travel.html
@@ -82,7 +82,7 @@
 				<div class="travel-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h1 class="text-white">TRAVEL</h1>
+						  <h1 class="text-white" style="font-size: 80px;">TRAVEL</h1>
 						</div>
 
 						</div>
@@ -91,59 +91,37 @@
 			</section>
 
 			<section>
-				<div class="welcome cf">
-					<div class="intro">
-					 <br><br>
-						<font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
-							<marquee behavior="scroll" direction="left">How to reach NIT Kurukshetra</marquee>
-							<br>
-							<h2>AIR CONNECTION</h2>
-							<br>
-							
-	<p> 
-						<img src="./img/airport.jpg" align="left" width="150" height="100">
-						Kurukshetra does not have its own airport, but through a flight, you can reach Chandigarh (102 km) or Delhi (160 km) and take a cab/bus from there. To get more information on flights to and from chandigarh and delhi, please visit www.airindia.in for Air India and makemytrip for other carriers.</p>
-						<br>
-						<br>
-						<br>
-							<h1>RAIL CONNECTION</h1>
-	<br>
-	<p><img src="./img/airport.jpg" align="left" width="150" height="100">
-	Kurukshetra city is well connected by Indian Railway to all the major cities of India. Kurukshetra is a junction on the Amritsar-Delhi railway line and can be easily reached via trains. To get the list of trains and their schedule, please visit www.indianrail.gov.in</p>
-	<a href="https://www.irctc.co.in/nget/">Irctc service</a>
-						<br><br><br>
-							<h1>ROAD CONNECTION</h1>
-	<br>
-	<img src="./img/roadways.jpg" align="left" width="150" height="100">
-	The Grand Trunk Road also called National Highway 1 runs through Kurukshetra which is 150 km off Delhi and 90 km south of Chandigarh. Buses are also easily available.
-	<br>
-	<br>
-						<br>	
-							<h1>LOCAl TRAVEL</h1>
-	<p>In the very first verse of Bhagwad-Gita (धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः | मामकाः पाण्डवाश्चैव किम् अकुर्वत संजय ||), Kurukshetra is described as DHARAMKSHETRA i.e. 'Region of righteousness'. Kurukshetra is a place of great historical and religious importance, revered all over the country for its sacred association with the Vedas and the Vedic Culture. It was here that the battle of Mahabharat was fought and Lord Krishna preached His Philosophy of 'KARMA' as enshrined in the Holy Bhagwad-Gita, to Arjuna at Jyotisar. According to Hindu mythology, Kurukshetra is spread over, a circuit of about 48 KOS, which includes a large number of holy places, temples and sacred tanks connected with the religious events/rituals, Mahabharat War and Kurus, the ancestor of Kauravas and Pandavs. Kurukshetra is intimately related to the Aryan civilization and its growth all along the sacred river Saraswati.
-	It is believed that the holy waters of all sacred rivers flow/converge into Kurukshetra's Sannehit Sarovar, at the time of Somavati 'Amavasya' and solar eclipse. It is believed that those who bath in the tanks in Kurukshetra go to heaven after death. Mahabharata states that one who dies at Kurukshetra attains salvation after death.
-	It is the land where the sage Manu penned his 'Manusmriti' and where learned 'rishis' compiled the Rig Veda and Sama Veda.
-	Kurukshetra is named after King Kuru, who also performed a supreme sacrifice to bring prosperity to the land and his people.
-	ग्रह नक्षत्र ताराणां कालेन पतनाद~भयम् ||</p>
-							<p>कुरुक्षेत्रे मृताणां च पतन नैव विद्यते ||</p>
-	<p>"Come one and come all to have a glimpse of the sacred land of eternal bliss and to personally feel its religious and celestial fervour, heritage and ambience."</p><br>
-	Places and Pics. For more information please visit following website of Haryana tourism.<br>
-	<a href ="http://haryanatourism.gov.in/Kurukshetra-places-of-interest">http://haryanatourism.gov.in/Kurukshetra-places-of-interest</a>
-	<br>Nearby places to visit<br> 	
-	<a href="https://www.holidayiq.com/Kurukshetra-Weekend-Getaways-2110.html">https://www.holidayiq.com/Kurukshetra-Weekend-Getaways-2110.html</a>
-	<br>
-	<a href="https://www.justdial.com/Kurukshetra/Taxi-Services/nct-10472932">Taxi service</a>
-	
-	
-	<h2 class="text-black" align="center">DELHI TO NIT KURUKSHETRA<br>NIT Kurukshetra,<br>HARYANA-136119</h2><br><br><br>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d890613.3692064492!2d76.31949330957183!3d29.312893754295867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x390cfd5b347eb62d%3A0x37205b715389640!2sDelhi!3m2!1d28.7040592!2d77.10249019999999!4m5!1s0x390e3f517a8f797b%3A0xf188ce713fa84c94!2sNIT%20KKR%2C%20NIT%2C%20Thanesar%2C%20Haryana!3m2!1d29.947374!2d76.817887!5e0!3m2!1sen!2sin!4v1582906914380!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-	
+			
+			<br>
+			<br>
+			<br>
+			<br>
+			<center><h1 class="text-black">AIR CONNECTION</h1></center>
+			<br>
+			<BR>
+			<br>
+			<center><img src="img/airport.jpg" style="width: 60%"></center>
+			<br>
+			<BR>
+			<br>
+			<font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+Kurukshetra does not have its own airport, but through a flight, you can reach Chandigarh (102 km) or Delhi (160 km) and take a cab/bus from there. To get more information on flights to and from chandigarh and delhi, please visit <a href="www.airindia.in">www.airindia.in</a> for Air India and <a href="www.makemytrip.com">makemytrip</a> for other carriers.
+<br><br><Br>
 
-	</p></font>
-						<br>
-	<br.<br><br><br>
-					</div>
-				</div>
+<center><h1 class="text-black">RAIL CONNECTION</h1></center>
+			<br>
+			<BR>
+			<br>
+			<center><img src="img/railways.jpg" style="width: 60%"></center>
+			<br>
+			<BR>
+			<br>
+			<font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+Kurukshetra does not have its own airport, but through a flight, you can reach Chandigarh (102 km) or Delhi (160 km) and take a cab/bus from there. To get more information on flights to and from chandigarh and delhi, please visit www.airindia.in for Air India and makemytrip for other carriers.
+<br><br><Br>
+
+</p></font>
+				
 			</section>
 
 
