--- a/index.html
+++ b/index.html
@@ -119,19 +119,38 @@
 				
 			</section>
 		<section>
-			<div class="welcome cf" style="margin-left: 3%;">
-				<div class="intro">
-				 <br><br>
-				  <font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
-					Paper submissions are invited in the areas of next generation computing, communication and VLSI & Embedded Systems towards Intelligent and Green technologies. All submitted papers must be in SPRINGER AIS (Algorithms for Intelligent Systems) format.<br><br><br>
-Submit your research paper to IC4E-2020 through the <a href="https://easychair.org/conferences/?conf=ic4e2020">Online Submission System</a> 
-		
-		
-		</p></font>
-				  <br>
-		<br.<br><br><br>
-				</div>  
-			  </div>
+			<div class="wrapper">
+  
+  <div class="box">
+    <div class="content"><b>Paper submissions are invited</b> in the areas of next generation computing, communication and VLSI & Embedded Systems towards Intelligent and Green technologies. <br>
+    <br>
+    All submitted papers must be in <b>SPRINGER AIS (Algorithms for Intelligent Systems) format.</b>
+    <br><br><Br>
+Submit your research paper to MIND 2020 through the Online Submission System .<br>
+<a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</a>
+
+</div>
+  </div>
+
+  <div class="box">
+    <div class="content">
+
+
+ All the Accepted and Presented Papers will be published in edited volume of Springer Book Series.High quality extended papers of <b>IC4E2020</b> will be invited for possible submission and publication (after another rigorous review) in the special/regular issues of the following journals: 
+ 
+⦁	Computers & Electrical Engineering, Elsevier (SCI Indexed IF 2.18) 
+
+Nano Communication Networks - Journal - Elsevier (SCI Indexed IF 2.25) 
+International Journal of Intelligence and Sustainable Computing, Inderscience 
+</div>
+  </div>
+
+  <div class="box">
+    <div class="content">Box C</div>
+  </div>
+
+
+</div>
 		</section>
 			  
 			<section>
