--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ Submit your research paper to MIND 2020 through the Online Submission System .<b
     <div class="content">
 
 
- All the Accepted and Presented Papers will be published in edited volume of Springer Book Series.High quality extended papers of <b>IC4E2020</b> will be invited for possible submission and publication (after another rigorous review) in the special/regular issues of the following journals: 
+ All the Accepted and Presented Papers will be published in edited volume of Springer Book Series.High quality extended papers of <b>IC4E2020</b> will be invited for possible submission and publication (after another rigorous review) in the special/regular issues of the following journals:<br><br>
  
-⦁	Computers & Electrical Engineering, Elsevier (SCI Indexed IF 2.18) 
+⦁	Computers & Electrical Engineering, Elsevier (SCI Indexed IF 2.18) <br><br>
 
-Nano Communication Networks - Journal - Elsevier (SCI Indexed IF 2.25) 
-International Journal of Intelligence and Sustainable Computing, Inderscience 
+⦁	Nano Communication Networks - Journal - Elsevier (SCI Indexed IF 2.25) <br><br>
+⦁	International Journal of Intelligence and Sustainable Computing, Inderscience <br><br>
 </div>
   </div>
 
