--- a/index.html
+++ b/index.html
@@ -145,8 +145,11 @@ Submit your research paper to MIND 2020 through the Online Submission System .<b
 </div>
   </div>
 
-  <div class="box">
-    <div class="content">Box C</div>
+ <div class="box">
+    <div class="content">Initial Paper Submission:<b style="color: red"> 30 June 2020</b><br><br> 
+ Decision Notification: <b style="color: red">31 August 2020</b><br><br>
+ Final Submission:<b style="color: red"> 15 September 2020</b><br><br>
+Registration Deadline:<b style="color: red"> 15 September 2020</b></div>
   </div>
 
 
