--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						
 <!-- Start video-sec Area -->
 			<section id="theme">
-				<marquee behavior="scroll" direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="red">All the Accepted and Presented Papers will be published in the Springer Book series</font></h4></marquee><br><br>
+				<marquee behavior="scroll" direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="red">Selected Papers will be published in the Springer Book series</font></h4></marquee><br><br>
 				<marquee behavior="scroll" direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><font color="blue" size="+2"><a href="Brochure2.pdf">DOWNLOAD BROCHURE</a></font></h4></marquee>
 				  
 				<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN">Authors are requested to submit full length paper online through <a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</a></font></h4></marquee><br><br>
