--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<div class="wrapper">
   
   <div class="box">
-	  <div class="content"><h1 class="text-white" style="font-color:red">SUBMISSION</h1><br><br><b>Paper submissions are invited</b> in the areas of next generation computing, communication and VLSI & Embedded Systems towards Intelligent and Green technologies. <br>
+	  <div class="content"><center><h1 class="text-white" style="font-color:red">SUBMISSION</h1></center><br><br><b>Paper submissions are invited</b> in the areas of next generation computing, communication and VLSI & Embedded Systems towards Intelligent and Green technologies. <br>
     <br>
     All submitted papers must be in <b>SPRINGER AIS (Algorithms for Intelligent Systems) format.</b>
     <br><br><Br>
@@ -135,7 +135,7 @@ Submit your research paper to MIND 2020 through the Online Submission System .<b
   <div class="box">
     <div class="content">
 
-<h1 class="text-white" style="font-color:red">PUBLICATION</h1><br><br>
+<center><h1 class="text-white" style="font-color:red">PUBLICATION</h1></center><br><br>
  All the Accepted and Presented Papers will be published in edited volume of Springer Book Series.High quality extended papers of <b>IC4E2020</b> will be invited for possible submission and publication (after another rigorous review) in the special/regular issues of the following journals:<br><br>
  
 ⦁	Computers & Electrical Engineering, Elsevier (SCI Indexed IF 2.18) <br><br>
@@ -146,7 +146,7 @@ Submit your research paper to MIND 2020 through the Online Submission System .<b
   </div>
 
  <div class="box">
-    <div class="content"><h1 class="text-white" style="font-color:red">KEYDATES</h1><br><br>Initial Paper Submission:<b style="color: red"> 30 June 2020</b><br><br> 
+    <div class="content"><center><h1 class="text-white" style="font-color:red">KEYDATES</h1></center><br><br>Initial Paper Submission:<b style="color: red"> 30 June 2020</b><br><br> 
  Decision Notification: <b style="color: red">31 August 2020</b><br><br>
  Final Submission:<b style="color: red"> 15 September 2020</b><br><br>
 Registration Deadline:<b style="color: red"> 15 September 2020</b></div>
