--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Submit your research paper to MIND 2020 through the Online Submission System .<b
     <div class="content">
 
 <center><h2 class="text-white" style="color:red">PUBLICATION</h2></center><br><br>
- All the Accepted and Presented Papers will be published in edited volume of Springer Book Series.High quality extended papers of <b>IC4E2020</b> will be invited for possible submission and publication (after another rigorous review) in the special/regular issues of the following journals:<br><br>
+ Selected Papers will be published in edited volume of Springer Book Series.High quality extended papers of <b>IC4E2020</b> will be invited for possible submission and publication (after another rigorous review) in the special/regular issues of the following journals:<br><br>
  
 ⦁	Computers & Electrical Engineering, Elsevier (SCI Indexed IF 2.18) <br><br>
 
