--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <br>
     All submitted papers must be in <b>SPRINGER AIS (Algorithms for Intelligent Systems) format.</b>
     <br><br><Br>
-Submit your research paper to MIND 2020 through the Online Submission System .<br>
+Submit your research paper to through the Online Submission System .<br>
 <a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</a>
 
 </div>
