--- a/callforp.html
+++ b/callforp.html
@@ -82,7 +82,7 @@
 				<div class="callforp-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h1 class="text-white">CALL FOR PAPERS</h1>
+						  <h1 class="text-white" style="font-size: 400%;">CALL FOR PAPERS</h1>
 						</div>
 	
 						</div>
@@ -93,15 +93,15 @@
 			<div class="welcome cf">
         <div class="intro">
          <br><br>
-          <font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
+          <font color="#010101" size="+1" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >
 Original research works are invited from potential authors in the mentioned conference tracks and related areas of application. All the contributions should be of high quality, original and not published elsewhere or submitted for publication during the review period.<br>
 <br>
 
 
 Authors are requested not to mention their names and affiliations on manuscripts, as for the purpose of double blind review. 
 
-All submitted papers must be in <a href="https://www.springer.com/series/16171">SPRINGER AIS format</a>. <a href="https://www.springer.com/us/authors-editors/book-authors-editors/resources-guidelines/book-manuscript-guidelines/manuscript-preparation/5636"><br>
-<br>Click here</a> to download AIS Paper template.
+All submitted papers must be in <a href="https://www.springer.com/series/16171">SPRINGER AIS format</a>. <center><a href="https://www.springer.com/us/authors-editors/book-authors-editors/resources-guidelines/book-manuscript-guidelines/manuscript-preparation/5636"><br>
+			  <br>Click here</a> to download AIS Paper template.</center>
 <br><br>
 
 
@@ -112,7 +112,7 @@ All submitted papers must be in <a href="https://www.springer.com/series/16171">
 
 <br><br>
 
-<font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.<br><br> 
+<font color="#010101" size="+1" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >Regular papers should present novel perspectives within the general scope of the conference. Short papers (Work-in-Progress) are an opportunity to present preliminary or interim results.<br><br> 
 Literature reviews/survey papers will only be considered if they present a new perspective or clearly benefit the field. To be published, such papers must go beyond a review of the literature to define the field in a new way or highlight exciting new technologies or areas of research.<br><br>
 All submitted papers will be subjected to a “similarity test” by Turnitin Software. Papers achieving minimal similarity index will be examined and those that are deemed unacceptable will be rejected/withdrawn without a formal review.</p></font>
 
@@ -121,7 +121,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 <H1 class="text-black" style="margin-left: 5%">PLAIGARISM POLICY FOR IC4E-2020</H1>
 <BR><BR>
 
-<font color="#010101" size="+2" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >Authors are requested to kindly refrain from plagiarism in any form. Authors should submit their original and unpublished research work not under consideration for publication elsewhere. <b>Manuscript found to be plagiarized during any stage of review shall be rejected.</b> As per copyright transfer agreement, authors are deemed to be individually or collectively responsible for the content of manuscript published them.<br><br>
+<font color="#010101" size="+1" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >Authors are requested to kindly refrain from plagiarism in any form. Authors should submit their original and unpublished research work not under consideration for publication elsewhere. <b>Manuscript found to be plagiarized during any stage of review shall be rejected.</b> As per copyright transfer agreement, authors are deemed to be individually or collectively responsible for the content of manuscript published them.<br><br>
 •  Submitted papers must comply with Springer plagiarism policy and procedures. <br><br>
 •  Any plagiarised text must not be from significant contribution part of paper. <br><br>
 •  Even plagiarism from a single source must not be more than 4%. <br><br>
@@ -140,7 +140,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 				<div class="conftracks-bg">
 					<div class="row height align-items-center justify-content-center">
 						<div class="col-lg-10">
-						  <h1 class="text-white">CONFERENCE TRACKS</h1>
+						  <h1 class="text-white" style="font-size: 400%;">CONFERENCE TRACKS</h1>
 						</div>
 	
 						</div>
