--- a/callforp.html
+++ b/callforp.html
@@ -154,67 +154,67 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 			<div class="row">
   <div class="column" style="background-color:#aaa;"><br>
 	  <center><h2 class="text-black">COMPUTING</h2><br><br><BR></center>
-    <p>&nbsp;&nbsp;Internet of Things (IoT)<BR><BR>
-&nbsp;&nbsp;Smart Cities<BR><BR>
-&nbsp;&nbsp;Digital Health, Telehealth<br><BR>
-&nbsp;&nbsp;Cluster Computing & Cloud Computing<br><BR>
-&nbsp;&nbsp;IoT in 5G Communication<br><BR>
-&nbsp;&nbsp;Mobile Computing<br><BR>
-&nbsp;&nbsp;Green Computing<br><BR>
-&nbsp;&nbsp;Soft Computing<br><BR>
-&nbsp;&nbsp;Quantum Computing<br><BR>
-&nbsp;&nbsp;Multimedia Communication over Wireless<br><BR>
-&nbsp;&nbsp;Cognitive Computing<br><BR>
-&nbsp;&nbsp;Scalable Computing<br><BR>
-&nbsp;&nbsp;Machine Learning<br><BR>
-&nbsp;&nbsp;Speech Recognition<br><BR>
-&nbsp;&nbsp;Cyber Physical Systems<br><BR>
-&nbsp;&nbsp;Machine to Machine<br><BR>
-&nbsp;&nbsp;Mobile Applications<br><BR>
+    <p>&nbsp;&nbsp;🡢 Internet of Things (IoT)<BR><BR>
+&nbsp;&nbsp;🡢 Smart Cities<BR><BR>
+&nbsp;&nbsp;🡢 Digital Health, Telehealth<br><BR>
+&nbsp;&nbsp;🡢 Cluster Computing & Cloud Computing<br><BR>
+&nbsp;&nbsp;🡢 IoT in 5G Communication<br><BR>
+&nbsp;&nbsp;🡢 Mobile Computing<br><BR>
+&nbsp;&nbsp;🡢 Green Computing<br><BR>
+&nbsp;&nbsp;🡢 Soft Computing<br><BR>
+&nbsp;&nbsp;🡢 Quantum Computing<br><BR>
+&nbsp;&nbsp;🡢 Multimedia Communication over Wireless<br><BR>
+&nbsp;&nbsp;🡢 Cognitive Computing<br><BR>
+&nbsp;&nbsp;🡢 Scalable Computing<br><BR>
+&nbsp;&nbsp;🡢 Machine Learning<br><BR>
+&nbsp;&nbsp;🡢 Speech Recognition<br><BR>
+&nbsp;&nbsp;🡢 Cyber Physical Systems<br><BR>
+&nbsp;&nbsp;🡢 Machine to Machine<br><BR>
+&nbsp;&nbsp;🡢 Mobile Applications<br><BR>
 </p>
   </div>
   <div class="column" style="background-color:#bbb;"><br>
     <center><h2 class="text-black">COMMUNICATION</h2><br><br><BR></center>
     <p>Signal Processing<br><BR>
-Image and Video Processing<br><BR>
-Medical Processing<br><BR>
-Wireless Communications<br><BR>
-Wireless Sensor Networks<br><BR>
-Adhoc Networks<br><BR>
-Cognitive Radio and Spectrum Management<br><BR>
-Software Defined Radio<br><BR>
-Software Defined Networks<br><BR>
-Photonics and Optical Communication<br><BR>
-Sensors and Sensors technology<br><BR>
-Satellite and Space Communications<br><BR>
-Vehicular, Underground and Underwater Networks<br><BR>
-Network Security<br><BR>
-Cryptography<br><BR>
-Physical Layer Security<br><BR>
-Network Protocols<br><BR>
+🡢 Image and Video Processing<br><BR>
+🡢 Medical Processing<br><BR>
+🡢 Wireless Communications<br><BR>
+🡢 Wireless Sensor Networks<br><BR>
+🡢 Adhoc Networks<br><BR>
+🡢 Cognitive Radio and Spectrum Management<br><BR>
+🡢 Software Defined Radio<br><BR>
+🡢 Software Defined Networks<br><BR>
+🡢 Photonics and Optical Communication<br><BR>
+🡢 Sensors and Sensors technology<br><BR>
+🡢 Satellite and Space Communications<br><BR>
+🡢 Vehicular, Underground and Underwater Networks<br><BR>
+🡢 Network Security<br><BR>
+🡢 Cryptography<br><BR>
+🡢 Physical Layer Security<br><BR>
+🡢 Network Protocols<br><BR>
 </p>
   </div>
   <div class="column" style="background-color:#ccc;"><br>
 	  <center><h2 class="text-black">VLSI AND EMBEDDED SYSTEMS</h2><br><br><BR></center>
     <p>
-Computer Architecture<br><BR>
-VLSI Architecture and Algorithms<br><BR>
-Digital & Analog IC Design<br><BR>
-Radio Frequency Design<br><BR>
-Mixed Signal Design<br><BR>
-Material Science & Nanotechnology<br><BR>
-Nano electronics<br><BR>
-Embedded Systems<br><BR>
-Hybrid Smart Models and Applications<br><BR>
-Testing Systems<br><BR>
-Digital/Analog Integrated Systems<br><BR>
-Processor Design<br><BR>
-Memory Design<br><BR>
-FPGA Architecture and Design<br><BR>
-Power Performance Trade-off<br><BR>
-Power Efficiency & Management<br><BR>
-Emerging Logical Technologies<br><BR>
-Nano CMOS<br><BR>
+🡢 Computer Architecture<br><BR>
+🡢 VLSI Architecture and Algorithms<br><BR>
+🡢 Digital & Analog IC Design<br><BR>
+🡢 Radio Frequency Design<br><BR>
+🡢 Mixed Signal Design<br><BR>
+🡢 Material Science & Nanotechnology<br><BR>
+🡢 Nano electronics<br><BR>
+🡢 Embedded Systems<br><BR>
+🡢 Hybrid Smart Models and Applications<br><BR>
+🡢 Testing Systems<br><BR>
+🡢 Digital/Analog Integrated Systems<br><BR>
+🡢 Processor Design<br><BR>
+🡢 Memory Design<br><BR>
+🡢 FPGA Architecture and Design<br><BR>
+🡢 Power Performance Trade-off<br><BR>
+🡢 Power Efficiency & Management<br><BR>
+🡢 Emerging Logical Technologies<br><BR>
+🡢 Nano CMOS<br><BR>
 </p>
   </div>
 </div>
