--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Submit your research paper to through the Online Submission System .<br>
     <div class="content">
 
 <center><h2 style="color:red;font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif'">PUBLICATION</h2></center><br><br>
- The proposal for an edited book is approved for the book series “Algorithms for Intelligent Systems” (https://www.springer.com/series/16171).
+ The proposal for an edited book is approved for the book series <a href="https://www.springer.com/series/16171">Algorithms for Intelligent Systems</a>.
 The original papers presented in the conference, modified by authors as book chapters and under the special theme <b>Intelligent Computing and Communication Systems</b> will be published as book chapter in the edited volume.<br><br>
 High quality extended papers of <b>IC4E2020</b> will be invited for possible submission and publication (after another rigorous review) in the special/regular issues of the following journals:<br><br>
  
