--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<div class="wrapper">
   
   <div class="box">
-	  <div class="content"><center><h2 style="color:red;font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif'">SUBMISSION</h2></center><br><br><b>Paper submissions are invited</b> in the areas of next generation computing, communication and VLSI & Embedded Systems towards Intelligent and Green technologies. <br>
+	  <div class="content"><center><h2 style="color:red;font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif'">SUBMISSION</h2></center><br><br><b>Paper submissions are invited</b> in the areas of next generation computing and communication Systems towards Intelligent and Green technologies. <br>
     <br>
     All submitted papers must be in <b>SPRINGER AIS (Algorithms for Intelligent Systems) format.</b>
     <br><br><Br>
