--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Registration Deadline:<b style="color: red"> 15 September 2020</b></div>
 			<br><br><br>	
 		<h1 class="mb-10" align="center">VENUE</h1><br><br>
 		<h2 class="text-black" align="center">Department of Electronics and Communication Engineering,<br>NIT Kurukshetra,<br>HARYANA-136119</h2><br><br><br>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1027.8001429596584!2d76.81679094449134!3d29.947979791542398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390e3f521c4f3a71%3A0x2c82fb6d6a3d980b!2sDepartment%20of%20Electronics%20And%20Communication%20Engineering!5e0!3m2!1sen!2sin!4v1582343892637!5m2!1sen!2sin" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" maptype="satellite"></iframe>
+			<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3457.105613445231!2d76.81328431463503!3d29.947640630095155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390e3f51801954b5%3A0x14d79f026b1ae4ec!2sNational%20Institute%20of%20Technology%2C%20Kurukshetra!5e0!3m2!1sen!2sin!4v1589871321845!5m2!1sen!2sin" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" maptype="satellite"></iframe>
 			<br><br><br><Br>
 		</section>
 		<section>
