--- a/callforp.html
+++ b/callforp.html
@@ -116,7 +116,7 @@ All submitted papers will be subjected to a “similarity test” by Turnitin So
 
 <br><br>
 
-<H1 class="text-black" style="margin-left: 5%">PLAIGARISM POLICY FOR IC4E-2020</H1>
+<H1 class="text-black" style="margin-left: 5%">PLAGIARISM POLICY FOR IC4E-2020</H1>
 <BR><BR>
 
 <font color="#010101" size="+1" margin-left="5%" ><p style="margin-left:5%;margin-right: 5%;line-height: normal" align="justify" >Authors are requested to kindly refrain from plagiarism in any form. Authors should submit their original and unpublished research work not under consideration for publication elsewhere. <b>Manuscript found to be plagiarized during any stage of review shall be rejected.</b> As per copyright transfer agreement, authors are deemed to be individually or collectively responsible for the content of manuscript published them.<br><br>
