--- a/index.html
+++ b/index.html
@@ -122,11 +122,12 @@
 			<div class="wrapper">
   
   <div class="box">
-	  <div class="content"><center><h2 style="color:red;font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif'">SUBMISSION</h2></center><br><br>
+	  <div class="content"><center><h2 style="color:red;font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif'">
+		  </h2></center><br><br>
     <br>
 		  <b>Paper submissions are invited</b> in the areas of next generation computing and communication Systems towards Intelligent and Green technologies.
     <br><br><Br>
-Submit your research paper to through the Online Submission System .<br>
+Submit your research paper to IC4E-2020 through the Online Submission System .<br>
 <a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</a>
 
 </div>
