--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   
   <div class="box">
 	  <div class="content"><center><h2 style="color:red;font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif'">
-		  </h2></center><br><br>
+		  SUBMISSION</h2></center><br><br>
     <br>
 		  <b>Paper submissions are invited</b> in the areas of next generation computing and communication Systems towards Intelligent and Green technologies.
     <br><br><Br>
